--- a/MyLifeCycle/app/src/main/AndroidManifest.xml
+++ b/MyLifeCycle/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyLifeCycle">
-        <activity android:name=".SubActivity"></activity>
+        <activity android:name=".SubActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,5 +18,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
