--- a/TmapTest/app/build.gradle
+++ b/TmapTest/app/build.gradle
@@ -6,6 +6,10 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    dataBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "com.example.tmaptest"
         minSdkVersion 16
