--- a/MyListView/app/src/main/AndroidManifest.xml
+++ b/MyListView/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mylistview">
 
-    <!-- android:icon, android:roundIcon에 적용된 이미지 변경 -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_main"
@@ -10,8 +9,10 @@
         android:roundIcon="@mipmap/ic_main_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyListView">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SplashActivity"
+        <activity android:name=".MemberActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
