--- a/MyKakaoLogin/app/build.gradle
+++ b/MyKakaoLogin/app/build.gradle
@@ -38,7 +38,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // 카카오 SDK 모듈 설정
-    implementation "com.kakao.sdk:v2-user:2.3.0" // 카카오 로그인
-    implementation "com.kakao.sdk:v2-talk:2.3.0" // 친구, 메시지(카카오톡)
-    implementation "com.kakao.sdk:v2-link:2.3.0" // 메시지(카카오링크)
+//    implementation "com.kakao.sdk:v2-user:2.3.0" // 카카오 로그인
+//    implementation "com.kakao.sdk:v2-talk:2.3.0" // 친구, 메시지(카카오톡)
+//    implementation "com.kakao.sdk:v2-link:2.3.0" // 메시지(카카오링크)
+    // ### 라이브러리
+    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
+
 }
