--- a/MyKakaoLogin/gradle.properties
+++ b/MyKakaoLogin/gradle.properties
@@ -17,3 +17,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+
+# ### 라이브러리 버전
+KAKAO_SDK_GROUP=com.kakao.sdk
+KAKAO_SDK_VERSION=1.1.7
