--- a/MyKakaoLogin/app/src/main/AndroidManifest.xml
+++ b/MyKakaoLogin/app/src/main/AndroidManifest.xml
@@ -5,7 +5,13 @@
     <!-- 인터넷 사용 권한 설정-->
     <uses-permission android:name="android.permission.INTERNET" />
 
+<!--
+###
+    application name
+    meta-data
+-->
     <application
+        android:name=".GlobalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,9 +24,14 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
 
-</application>
 
-    </manifest>
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_app_key"/>
+    </application>
+
+</manifest>
