--- a/MyKakaoLogin/build.gradle
+++ b/MyKakaoLogin/build.gradle
@@ -16,12 +16,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url "https://maven.google.com"
+        }
 
         // 카카오 SDK 레포지토리 설정
-//        maven {
-//            url 'https://devrepo.kakao.com/nexus/content/groups/public/'
-//        }
-        // ### 메이븐
         maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'}
     }
 }
