--- a/MyKakaoLoginKotlin/build.gradle
+++ b/MyKakaoLoginKotlin/build.gradle
@@ -18,6 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        //+++ 추가
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
 }
 
