--- a/MyKakaoLogin/app/build.gradle
+++ b/MyKakaoLogin/app/build.gradle
@@ -37,9 +37,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    // ### Kakao SDK 모듈 라이브러리
-    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
-    // ###
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.50'
+    // ### Kakao SDK 모듈 라이브러리추가
+    implementation "com.kakao.sdk:v2-user:2.3.0" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.3.0" // 친구, 메시지(카카오톡)
 
 }
