--- a/MyKakaoMsg/build.gradle
+++ b/MyKakaoMsg/build.gradle
@@ -18,6 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        // 카카오 SDK 레포지토리 설정
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'}
     }
 }
 
