21-02-01 Send KakaoTalk Msg
카카오 로그인 구현

--- a/MyKakaoMsg/app/build.gradle
+++ b/MyKakaoMsg/app/build.gradle
@@ -3,9 +3,15 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+
+    dataBinding {
+        enabled true
+    }
 
     defaultConfig {
         applicationId "com.example.mykakaomsg"
