--- a/MyKakaoMsg/app/build.gradle
+++ b/MyKakaoMsg/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     // 카카오 SDK 모듈 라이브러리 추가
     implementation "com.kakao.sdk:v2-user:2.3.0" // 카카오 로그인
     implementation "com.kakao.sdk:v2-talk:2.3.0" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-link:2.3.0" // 메시지(카카오링크)
 }
